# jsboige-mcp-servers

./: .gitignore  CI-FAILURES-REPORT.md  CONTRIBUTING.md  INDEX.md  LICENSE  README-JUPYTER-MCP.md  README-capture-errors.md  README.md  analyze-roo-errors.bat  analyze-roo-errors.sh  capture-roo-errors.sh  package.json  start-jinavigator-mcp.js  start-jupyter-mcp.bat  start-jupyter-mcp.js  start-quickfiles-mcp.bat  start-quickfiles-mcp.sh  start-searxng-mcp.bat  start-searxng-mcp.sh  temp-commit-push.js  test-quickfiles-connection.js  test_notebook_new.ipynb
.github/: CODEOWNERS
servers/jupyter-papermill-mcp-server/: .gitignore  CHANGELOG_CONSOLIDATION_PHASE3.md  CHANGELOG_CONSOLIDATION_PHASE4.md  CHANGELOG_CONSOLIDATION_PHASE5.md  CHANGELOG_PHASE6C_WRAPPERS_COMMENTED.md  CHECKPOINT_SDDD_PHASE4.md  CHECKPOINT_SDDD_PHASE5.md  CHECKPOINT_SDDD_PHASE5_FINAL.md  GUIDE_MIGRATION_UTILISATEURS.md  PLAN_CLEANUP_PHASE3.md  RAPPORT-MIGRATION-MCP-JUPYTER.md  RAPPORT-SYNC-REFACTORING.md  RAPPORT_CONSOLIDATION_FINALE.md  RAPPORT_FINAL_CONSOLIDATION_MCP_JUPYTER.md  RAPPORT_FINAL_PHASE6.md  RAPPORT_MISSION_PHASE3_TRIPLE_GROUNDING.md  RAPPORT_MISSION_PHASE4_TRIPLE_GROUNDING.md  RAPPORT_MISSION_PHASE5_FINALE_TRIPLE_GROUNDING.md  RAPPORT_NETTOYAGE_FINAL.md  RAPPORT_VALIDATION_FINALE_JUPYTER_PAPERMILL_CONSOLIDEE.md  README.md  VALIDATION_NOTEBOOKS_REELS_PHASE6.md  debug_execute_cell.py  diagnostic_java_env.ipynb  package.json  pyproject.toml  pytest.ini  requirements-test.txt  start_jupyter_mcp.bat  test_consolidation.py  test_e2e_direct.ps1  test_e2e_with_timeout.ps1  test_fastmcp.py  test_mcp_jupyter.ipynb  test_mcp_protocol.py  test_reconsolidation_sddd.py  test_sddd_mission_complete_parameterized.ipynb  test_simple_reconsolidation.py  test_validation_finale.py
servers/jupyter-papermill-mcp-server/MyIA.AI.Notebooks/GenAI/: test_openai_modern_syntax.ipynb
servers/jupyter-papermill-mcp-server/docs/: ARCHITECTURE-HYBRIDE-GUIDE-UTILISATEUR.md  CLEANUP_PHASE3_PREPARATION.md  INDEX.md
servers/jupyter-papermill-mcp-server/docs/refactoring/: 03d-jupyter-papermill-completion-report.md  03d-jupyter-papermill-test-plan.md
servers/jupyter-papermill-mcp-server/docs/setup/: CONDA_ENVIRONMENT_SETUP.md
servers/jupyter-papermill-mcp-server/papermill_mcp/: __init__.py  __main__.py  config.py  main.py  main_basic.py  main_direct.py  main_fastmcp.py  main_fixed.py  main_mcp_std.py  main_minimal.py  main_simple.py  main_working.py
servers/jupyter-papermill-mcp-server/papermill_mcp/core/: __init__.py  jupyter_manager.py  papermill_executor.py
servers/jupyter-papermill-mcp-server/papermill_mcp/services/: __init__.py  async_job_service.py  kernel_service.py  notebook_crud_service.py  notebook_metadata_service.py  notebook_service.py  notebook_service_consolidated.py  notebook_validation_service.py
servers/jupyter-papermill-mcp-server/papermill_mcp/tools/: __init__.py  execution_tools.py  kernel_tools.py  notebook_tools.py
servers/jupyter-papermill-mcp-server/papermill_mcp/utils/: __init__.py  dotnet_environment.py  file_utils.py
servers/jupyter-papermill-mcp-server/scripts/: 00-run-all-migration.ps1  03-validate-python-env.ps1  04-backup-mcp-settings.ps1  05-update-mcp-config.ps1  06-validate-migration.ps1  README.md  run_validation.ps1
servers/jupyter-papermill-mcp-server/scripts/legacy/: start_jupyter_mcp_portable.bat
servers/jupyter-papermill-mcp-server/tests/: README.md  __init__.py  conftest.py  test_config.py  test_execute_notebook_consolidation.py  test_execute_on_kernel_consolidation.py  test_execution_manager_core.py  test_file_utils.py  test_hybrid_architecture.py  test_inspect_notebook_consolidation.py  test_manage_async_job_consolidation.py  test_manage_kernel_consolidation.py  test_notebooks_complexity.py  test_read_cells_consolidation.py  test_refactoring_imports.py  test_robustness.py  test_validation_notebooks_reels.py
servers/jupyter-papermill-mcp-server/tests/integration/: debug_execute_cell.py  diagnose_mcp_issue.py  fix_unicode_crisis.py  test_consolidation.py  test_fix_chemins.py  test_mcp_protocol.py  test_reconsolidation_sddd.py  test_simple_reconsolidation.py  test_validation_finale.py
servers/jupyter-papermill-mcp-server/tests/mock_notebooks/: complex_semantic_kernel_mock.ipynb  medium_dataprocessing.ipynb  simple_math.ipynb  very_complex_symbolic_ai_mock.ipynb
servers/jupyter-papermill-mcp-server/tests/notebooks/: conversation_executor_complete.ipynb  test_consolidation_validation.ipynb  test_debug_bugs.ipynb  test_dotnet_failure_nuget.ipynb  test_dotnet_failure_nuget_executed_solution_a.ipynb  test_dotnet_success.ipynb  test_dotnet_success_executed.ipynb  test_dotnet_success_executed_solution_a.ipynb  test_executed_solution_a.ipynb  test_parameterization.ipynb  test_python_failure.ipynb  test_python_success.ipynb  test_sddd_mission_complete.ipynb  test_sddd_mission_complete_executed.ipynb  test_sddd_mission_complete_executed_20250923_221027.ipynb  test_solution_a_validation.ipynb  test_validation_11.ipynb  test_validation_11_executed.ipynb
servers/jupyter-papermill-mcp-server/tests/results/: 03d-jupyter-papermill-coverage-report-20251214-153500.md
servers/jupyter-papermill-mcp-server/tests/test_e2e/: __init__.py  conftest.py  test_e2e_mcp.py  test_e2e_simple.ps1  test_mcp_server_flow.py
servers/jupyter-papermill-mcp-server/tests/test_integration/: __init__.py  test_functional.py  test_import.py  test_papermill_execution.py  test_papermill_integration.py  test_papermill_simple.py  test_performance.py  test_server.py
servers/jupyter-papermill-mcp-server/tests/test_unit/: __init__.py  test_async_job_service.py  test_execution_tools_refactored.py  test_executor_logic.py  test_fastmcp.py  test_import_fastmcp.py  test_jupyter_manager_interrupt_timeout.py  test_kernel_service_refactored.py  test_notebook_crud_service.py  test_notebook_metadata_service.py  test_notebook_validation_service.py
servers/jupyter-papermill-mcp-server/tests/utils/: test_helpers.py
(+2253 files in other folders)
